tests/__snapshots__/validation-fileExtension-wrong-option-value-type-stderr.snap.txt
Error: Option 'fileExtension' requires an argument of type list.

  1 | {
> 2 |   "fileExtension": "json"
    |                    ^
  3 | }

      at ./tstyche.config.json:2:20

